[package]
name = "openchat"
version = "0.1.0"
edition = "2021"

[lib]
name = "openchat"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
clearscreen = "2.0.1"
crossterm = { version = "0.27.0", features = ["event-stream"] }
env_logger = "0.10.1"
log = "0.4.20"
native-tls = "0.2.11"
rand = "0.8.5"
serde = { version = "1.0.192", features = ["derive"] }
term_size = "0.3.2"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
